--- a/_posts/2012-10-04-javafx-only-half-of-the-solution.html
+++ b/_posts/2012-10-04-javafx-only-half-of-the-solution.html
@@ -23,9 +23,9 @@ blurb: |
 
 <p class="warning" style="text-align:centre">How is a Java application supposed to deal with this in a clean, cross-platform manner ?</p>
 
-<p>Well you can't now, <em>"write once run anywhere"</em> my ass.</p>
+<p>Well you can't now, <em>"write once run anywhere"</em>...</p>
 
-<p>They didn't show the dreaded <code class="simple">GateKeeper</code> warning dialog you get when you launch an application coming from an unidentified developer when they demoed their app on OSX. Why ? Because it wasn't sandboxed. Cheaters.</p>
+<p>They didn't show the dreaded <code class="simple">GateKeeper</code> warning dialog you get when you launch an application coming from an unidentified developer when they demoed their app on OSX. Why ? Because it wasn't sandboxed. </p>
 
 <div style="text-align:centre"><img src="/img/gatekeeper_dialog.jpg"/></div>
 
