Added new project to projects.html page

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,12 @@ title: Blog
 <div id="home"> 
 <script src="/js/mdpopup.js"></script>
 <h3>
+	<img class="project-icon" src="/img/icons/golang.png"/>
+	<a title="goamzpa " href="/blog/take-java-to-app-store/">goamzpa</a>
+</h3>
+<p>A <a href="https://github.com/mdinacci/goamzpa" title="Link to goamzpa repository">Go library</a> to use the Amazon Product Advertising API from Go.
+</p>
+<h3>
 	<img class="project-icon" src="/img/icons/java.png"/>
 	<a title="OpenJDK " href="/blog/take-java-to-app-store/">OpenJDK 7 fork</a>
 </h3>
