Added note on top of 'forking the jdk' article

--- a/_posts/2012-06-30-forking-jdk-for-fun-and-profit.html
+++ b/_posts/2012-06-30-forking-jdk-for-fun-and-profit.html
@@ -14,7 +14,7 @@ blurb: |
 
       <p>Our OpenJDK fork currently provides: </p>
 ---
-
+<p class="headsup"><strong>Update: 04 November 2012 - The OpenJDK macosx-port has vastly improved in the last few months and all my patches have been accepted so I no longer recommend this fork.</strong>
 <p>At <a href="http://infinitekind.com">my current job</a> I'm tasked with bringing a Java Swing application to the App Store.</p>
 
 <p>The way to do it, on OSX, is to bundle a Java distribution within the application as by Apple's terms it is no longer possible to distribute applications that rely on technologies optionally installed. As such, I started looking how to bundle the OpenJDK inside an OSX application.</p>
