Added watchlist alert to support page. Fixed wrong e-mail address in the feedback e-mails. Fixed link to my google plus profile.

--- a/support.html
+++ b/support.html
@@ -28,6 +28,7 @@ title: Support
 					<label for="subjects"><b>Subject:</b> </label>
 					<select id="subjects" name="subjects">
                         <optgroup label="Applications">
+                            <option value="Watchlist Alert">Watchlist Alert</option>
                             <option value="GroupBill">GroupBill</option>
                             <option value="Movie Suggestions">Movie Suggestions</option>
                         </optgroup>
