Added new post about watchlist alert

--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,16 @@ title: Blog
 <div id="home"> 
 <script src="/js/mdpopup.js"></script>
 <h3>
+	<img class="project-icon" src="/img/icons/wa.png"/>
+	<a title="Watchlist Alert" href="">Watchlist Alert</a>
+</h3>
+<p>
+	A Mac OSX application to monitor your eBay watchlist for expiring items and be sure not to lose any bid again.</br>
+	Now available for sale on the <a href="https://itunes.apple.com/app/watchlist-alert/id595336765?mt=12">Mac App Store</a>.
+</p>
+<h3>
 	<img class="project-icon" src="/img/icons/golang.png"/>
-	<a title="goamzpa " href="/blog/take-java-to-app-store/">goamzpa</a>
+	<a title="goamzpa" href="https://github.com/mdinacci/goamzpa">goamzpa</a>
 </h3>
 <p>A <a href="https://github.com/mdinacci/goamzpa" title="Link to goamzpa repository">Go library</a> to use the Amazon Product Advertising API from Go.
 </p>
@@ -14,7 +22,7 @@ title: Blog
 	<img class="project-icon" src="/img/icons/java.png"/>
 	<a title="OpenJDK " href="/blog/take-java-to-app-store/">OpenJDK 7 fork</a>
 </h3>
-<p>I maintain a <a href="https://bitbucket.org/mdinacci/openjdk7u-jdk" title="Link to OpenJDK7u repo">fork of OpenJDK 7</a> that fixes some bugs on OSX and that allow 
+<p>I maintain a <a href="https://bitbucket.org/infinitekind/openjdk7u-jdk" title="Link to OpenJDK7u repo">fork of OpenJDK 7</a> that fixes some bugs on OSX and that allow 
 	<a href="http://infinitekind.com/" title="Link to The Infinite Kind LLC">us</a> to publish our Java application in the App Store.</p>
 	<p>See <a href="/blog/take-java-to-app-store/" title="Link to article">this article</a> and <a href="/blog/forking-jdk-for-fun-and-profit/">this one too</a> for more details.
 </p>
@@ -22,7 +30,7 @@ title: Blog
 	<img class="project-icon" src="/img/icons/java.png"/>
 	<a title="OpenJDK " href="/blog/take-java-to-app-store/">AppBundler fork</a>
 </h3>
-<p>I maintain a <a href="https://bitbucket.org/mdinacci/appbundler" title="Link to AppBundler repo">fork of Oracle AppBundler</a> that adds some functionalities not available in the original code to ease the deployment of Java applications on OSX.</p>
+<p>I maintain a <a href="https://bitbucket.org/infinitekind/appbundler" title="Link to AppBundler repo">fork of Oracle AppBundler</a> that adds some functionalities not available in the original code to ease the deployment of Java applications on OSX.</p>
 	<p>See <a href="/blog/take-java-to-app-store/" title="Link to article">this article</a> and <a href="/blog/forking-jdk-for-fun-and-profit/">this one too</a> for more details.
 </p>
 
